--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
+<html lang="ru"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-  </head>
+</head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="" alt="Логотип студии Нёрдс">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="atelier.html">Студия</a></li>
+          <li><a href="clients.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <div>
+         <a class="cart" href="https://htmlacademy-htmlcss.github.io/933923-nerds-24/4/cart-item.html">Корзина</a>
+       </div>
+      </nav>
+    </header>
+    <main class="container">
+      <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
+      <section class="development services">
+        <h2 class="visually-hidden">Услуги по разработке</h2>
+        <ul class="services">
+          <li>
+            <h3>Веб сайты</h3>
+            <p>Мир никогда не будет прежним, после того как увидит ваш сайт!</p>
+            <a class="button" href="/catalog.html"></a>
+          </li>
+          <li>
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a class="button" href="catalog.html"></a>
+          </li>
+          <li>
+            <h3>Презинтации</h3>
+            <p>Вы даже не подразумеваете, на сколько вы изумительны!</p>
+            <a class="button" href="catalog.html"></a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+      </div>
+      <div>
+        <p><b>Давайте дружить это выгодно!</b></p>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </div>
+    </footer>
+  
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
-</html>
+</body></html>
