--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru"><head>
+<html lang="ru">
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+<title>HTML Academy: Нёрдс</title>
 </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="" alt="Логотип студии Нёрдс">
+<body>
+    <header class="header">
+        <nav class="navigation">
+        <a class="logo">
+            <img src="img/nerds-logo.svg" alt="Логотип студии Нёрдс" width="160" height="65">
         </a>
         <ul class="site-navigation">
-          <li><a href="atelier.html">Студия</a></li>
-          <li><a href="clients.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
+            <li><a href="atelier.html">Студия</a></li>
+            <li><a href="clients.html">Клиенты</a></li>
+            <li><a href="catalog.html">Магазин</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
         </ul>
-        <div>
-         <a class="cart" href="https://htmlacademy-htmlcss.github.io/933923-nerds-24/4/cart-item.html">Корзина</a>
-       </div>
-      </nav>
+        </nav>
+        <a class="basket" href="cart-item.html"><img src="img/cart-icon.svg">Корзина</a>
     </header>
     <main class="container">
       <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
@@ -27,16 +25,19 @@
         <h2 class="visually-hidden">Услуги по разработке</h2>
         <ul class="services">
           <li>
+            <img src="img/illustration-1.jpg" width="300" height="146" alt="Веб сайты">
             <h3>Веб сайты</h3>
             <p>Мир никогда не будет прежним, после того как увидит ваш сайт!</p>
             <a class="button" href="/catalog.html"></a>
           </li>
           <li>
+            <img src="img/illustration-2.jpg" width="300" height="146" alt="Приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <a class="button" href="catalog.html"></a>
           </li>
           <li>
+            <img src="img/illustration-3.jpg" width="300" height="146" alt="Презинтации">
             <h3>Презинтации</h3>
             <p>Вы даже не подразумеваете, на сколько вы изумительны!</p>
             <a class="button" href="catalog.html"></a>
@@ -47,9 +48,9 @@
     <footer class="main-footer">
       <div class="footer-social">
         <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#"><img src="img/vk-icon.svg" width="79" height="79" alt="Вк"></a></li>
+          <li><a class="social-button" href="#"><img src="img/fb-icon.svg" width="79" height="79" alt="Фейсбук"></a></li>
+          <li><a class="social-button" href="#"><img src="img/insta-icon.svg" width="79" height="79" alt="Инстаграмм"></a></li>
         </ul>
       </div>
       <div>
@@ -57,6 +58,5 @@
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
-  
-
-</body></html>
+</body>
+</html>
