--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>HTML Academy: Нёрдс</title>
 </head>
-
 <body>
 	<header class="header">
 		<nav class="navigation">
@@ -18,7 +17,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 		</nav>
-		<a class="basket" href="cart-item.html"><img src="img/cart-icon.svg">Корзина</a>
+		<a class="cart" href="cart-item.html"><img src="img/cart-icon.svg">Корзина</a>
 	</header>
 	<main class="container">
 		<h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
