--- a/catalog.html
+++ b/catalog.html
@@ -17,51 +17,51 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 		</nav>
-		<a class="cart" href="cart-item.html"><img src="img/cart-icon.svg">Корзина</a>
+		<a class="basket" href="cart-item.html">Корзина</a>
 		<h1 class="slogan">Магазин готовых шаблонов</h1>
 	</header>
 	<main class="catalog">
 		<section class="filters">
 			<form action="https://echo.htmlacademy.ru" method="post">
-				<div class="type">
+				<div class="filter-type">
 					<b>Сетка:</b>
 					<label>
-						<input class="filter-type" type="radio" name="network" value="adaptable">
+						<input class="filter-type-label" type="radio" name="network" value="adaptable">
 						Адаптивная
 					</label>
 					<label>
-						<input class="filter-type" type="radio" name="network" value="fixed">
+						<input class="filter-type-label" type="radio" name="network" value="fixed">
 						Фиксированная
 					</label>
 					<label>
-						<input class="filter-type" type="radio" name="network" value="rubber">
+						<input class="filter-type-label" type="radio" name="network" value="rubber">
 						Резиновая
 					</label>
 				</div>
-				<div class="module">
+				<div class="filter-module">
 					<b>Особенности:</b>
 					<label>
-						<input class="list" type="checkbox" name="module" value="slider">
+						<input class="filter-module-list" type="checkbox" name="module" value="slider">
 						Слайдер
 					</label>
 					<label>
-						<input class="list" type="checkbox" name="module" value="block">
+						<input class="filter-module-list" type="checkbox" name="module" value="block">
 						Блок преимуществ
 					</label>
 					<label>
-						<input class="list" type="checkbox" name="module" value="news">
+						<input class="filter-module-list" type="checkbox" name="module" value="news">
 						Новости
 					</label>
 					<label>
-						<input class="list" type="checkbox" name="module" value="gallery">
+						<input class="filter-module-list" type="checkbox" name="module" value="gallery">
 						Галерея
 					</label>
 					<label>
-						<input class="list" type="checkbox" name="module" value="basket">
+						<input class="filter-module-list" type="checkbox" name="module" value="basket">
 						Корзина
 					</label>
 				</div>
-				<button class="button-filters" type="submit">Отправить</button>
+				<button class="filter-button" type="submit">Отправить</button>
 			</form>
 		</section>
 		<section class="templates">
@@ -69,7 +69,6 @@
 			<ul class="catalog">
 				<li>
 					<div class=template-item>
-						<a class="template-item-link" href="#"><img src="img/browser.svg" alt="меню" width="360" height="40"></a>
 						<img src="img/img-sedona.jpg" alt="Шаблон седона" width="360" height="576">
 					</div>
 					<div class=more-info>
@@ -81,7 +80,6 @@
 
 				<li>
 					<div class=template-item>
-						<a class="template-item-link" href="#"><img src="img/browser.svg" alt="меню" width="360" height="40"></a>
 						<img src="img/img-pink.jpg" alt="Шаблон Pink" width="360" height="576">
 					</div>
 					<div class=more-info>
@@ -92,7 +90,6 @@
 				</li>
 				<li>
 					<div class=template-item>
-						<a class="template-item-link" href="#"><img src="img/browser.svg" alt="меню" width="360" height="40"></a>
 						<img src="img/img-barbershop.jpg" alt="Шаблон Барбершопа" width="360" height="576">
 					</div>
 					<div class=active>
@@ -103,7 +100,6 @@
 				</li>
 				<li>
 					<a class=template-item href="#">
-						<a class="template-item-link" href="#"><img src="img/browser.svg" alt="меню" width="360" height="40"></a>
 						<img src="img/img-mishka.jpg" alt="Шаблон Мишка" width="360" height="576">
 					</a>
 					<div class=more-info>
@@ -114,7 +110,6 @@
 				</li>
 				<li>
 					<div class=template-item>
-						<a class="template-item-link" href="#"><img src="img/browser.svg" alt="меню" width="360" height="40"></a>
 						<img src="img/img-aplus.jpg" alt="Шаблон A plus" width="360" height="576">
 					</div>
 					<div class=more-info>
@@ -125,7 +120,6 @@
 				</li>
 				<li>
 					<div class=template-item>
-						<a class="template-item-link" href="#"><img src="img/browser.svg" alt="меню" width="360" height="40"></a>
 						<img src="img/img-kvast.jpg" alt="Шаблон Кваст" width="360" height="576">
 					</div>
 					<div class=active>
