--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 		</nav>
-		<a class="cart" href="cart-item.html"><img src="img/cart-icon.svg">Корзина</a>
+		<a class="basket" href="cart-item.html">Корзина</a>
 	</header>
 	<main class="container">
 		<h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
