--- a/catalog.html
+++ b/catalog.html
@@ -26,42 +26,42 @@
 				<div class="filter-type">
 					<b>Сетка:</b>
 					<label>
-						<input class="filter-type-label" type="radio" name="network" value="adaptable">
+						<input class="filter-type-radio" type="radio" name="network" value="adaptable" checked="checked">
 						Адаптивная
 					</label>
 					<label>
-						<input class="filter-type-label" type="radio" name="network" value="fixed">
+						<input class="filter-type-radio" type="radio" name="network" value="fixed">
 						Фиксированная
 					</label>
 					<label>
-						<input class="filter-type-label" type="radio" name="network" value="rubber">
+						<input class="filter-type-radio" type="radio" name="network" value="rubber">
 						Резиновая
 					</label>
 				</div>
 				<div class="filter-module">
 					<b>Особенности:</b>
 					<label>
-						<input class="filter-module-list" type="checkbox" name="module" value="slider">
+						<input class="filter-module-checkbox" type="checkbox" name="module" value="slider" checked="checked">
 						Слайдер
 					</label>
 					<label>
-						<input class="filter-module-list" type="checkbox" name="module" value="block">
+						<input class="filter-module-checkbox" type="checkbox" name="module" value="block">
 						Блок преимуществ
 					</label>
 					<label>
-						<input class="filter-module-list" type="checkbox" name="module" value="news">
+						<input class="filter-module-checkbox" type="checkbox" name="module" value="news" checked="checked">
 						Новости
 					</label>
 					<label>
-						<input class="filter-module-list" type="checkbox" name="module" value="gallery">
+						<input class="filter-module-checkbox" type="checkbox" name="module" value="gallery">
 						Галерея
 					</label>
 					<label>
-						<input class="filter-module-list" type="checkbox" name="module" value="basket">
+						<input class="filter-module-checkbox" type="checkbox" name="module" value="basket">
 						Корзина
 					</label>
 				</div>
-				<button class="filter-button" type="submit">Отправить</button>
+				<button class="filters-button" type="submit">Отправить</button>
 			</form>
 		</section>
 		<section class="templates">
@@ -92,7 +92,7 @@
 					<div class=template-item>
 						<img src="img/img-barbershop.jpg" alt="Шаблон Барбершопа" width="360" height="576">
 					</div>
-					<div class=active>
+					<div class=more-info>
 						<a href="#"><h3>Barbershop</h3></a>
 						<p>Сайт салоны красоты. Для мужчин, да.</p>
 						<a class="button" href="/catalog.html">9900 руб.</a>
@@ -122,7 +122,7 @@
 					<div class=template-item>
 						<img src="img/img-kvast.jpg" alt="Шаблон Кваст" width="360" height="576">
 					</div>
-					<div class=active>
+					<div class=more-info>
 						<a href="#"><h3>Кваст</h3></a>
 						<p>Промо-сайт производителя крафтового кваса</p>
 						<a class="button" href="/catalog.html">9900 руб.</a>
