--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
 				</li>
 			</ul>
 		</section>
+		<section class="write-us">
+			<h2>Напишите нам</h2>
+			<form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+				<label for="username">Ваше имя:</label>
+				<input class="write-us-username" type=text id="username" placeholder="Представьтесь, пожалуйста">
+				<label for="email">Ваш e-mail:</label>
+				<input class="write-us-email" type=text id="email" placeholder="Для отправки ответа">
+				<label for="message">Текст письма:</label>
+				<input class="write-us-form" type=text id="message" id="message" placeholder="В свободной форме">
+				<button class="write-us-button" type="submit">Отправить</button>
+			</form>
+			<button class="modal-close" type="button">
+				Закрыть
+			</button>
+		</section>
 	</main>
 	<footer class="main-footer">
 		<div class="footer-social">
