Убрал параграф из ссылки
В 127 строке убрал параграф из ссылки

--- a/catalog.html
+++ b/catalog.html
@@ -123,9 +123,8 @@
 						<img src="img/img-aplus.jpg" alt="Шаблон A plus" width="360" height="576">
 						<div class=template-info>
 							<a href="#">
-								<h3>A Plus</h3>
+								<h3>A Plus</h3></a>
 								<p>Лендинг курсов повышения квалификации</p>
-							</a>
 							<a class="button" href="/catalog.html">9900 руб.</a>
 						</div>
 					</div>
