--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>HTML Academy: Нёрдс</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500&amp;subset=cyrillic" rel="stylesheet"> 
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 	<header class="header">
@@ -28,19 +31,19 @@
 					<img src="img/illustration-1.jpg" width="300" height="146" alt="Веб сайты">
 					<h3>Веб сайты</h3>
 					<p>Мир никогда не будет прежним, после того как увидит ваш сайт!</p>
-					<a class="button" href="/catalog.html"></a>
+					<a class="button button-red" href="/catalog.html">Заказать</a>
 				</li>
 				<li>
 					<img src="img/illustration-2.jpg" width="300" height="146" alt="Приложения">
 					<h3>Приложения</h3>
 					<p>Покорите топ-10 приложений в AppStore и Google Play</p>
-					<a class="button" href="catalog.html"></a>
+					<a class="button button-green" href="catalog.html">Заказать</a>
 				</li>
 				<li>
 					<img src="img/illustration-3.jpg" width="300" height="146" alt="Презинтации">
 					<h3>Презинтации</h3>
 					<p>Вы даже не подразумеваете, на сколько вы изумительны!</p>
-					<a class="button" href="catalog.html"></a>
+					<a class="button button-yellow" href="catalog.html">Заказать</a>
 				</li>
 			</ul>
 		</section>
@@ -69,7 +72,7 @@
 			</ul>
 		</div>
 		<div>
-			<p><b>Давайте дружить это выгодно!</b></p>
+			<p>Давайте дружить это выгодно!</p>
 			<p>Скидка 10% для друзей из социальных сетей.</p>
 		</div>
 	</footer>
