--- a/catalog.html
+++ b/catalog.html
@@ -122,8 +122,9 @@
 					<div class=template>
 						<img src="img/img-aplus.jpg" alt="Шаблон A plus" width="360" height="576">
 						<div class=template-info>
-							<a href="#"></a>
+							<a href="#">
 								<h3>A Plus</h3>
+                            </a>
 								<p>Лендинг курсов повышения квалификации</p>
 							<a class="button" href="/catalog.html">9900 руб.</a>
 						</div>
